[tool.poetry]
name = "homecli"
version = "0.1.1"
description = "Personal Home Directory Manager CLI"

license = "MIT"

authors = [
    "Bing Han"
]

repository = "https://github.com/BrightXiaoHan/HOME"
homepage = "https://github.com/BrightXiaoHan/HOME"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["packaging", "poetry"]

[tool.poetry.dependencies]
# Compatible Python versions
python = ">=3.7"

# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
homecli-install = "homecli:install"
homecli-pack = "homecli:pack"
